# detr

./: .gitignore  engine.py  hubconf.py  inference.py  main.py  pyproject.toml  requirements.txt  requirements.txt.old  test_all.py
src/datasets/: panoptic_eval.py  transforms.py
src/models/: backbone.py  detr.py  matcher.py  position_encoding.py  segmentation.py
